assets/css/main.css
/* ... */
.contact-info .contact-info-lists li a:hover span {
    color: #fff;
}
.contact-info .contact-info-lists li:first-child a span {
    font-size: 17px;
}

.contact-form input,
.contact-form textarea {
    width: 100%;
    background-color: #ececec;
    border: 1px solid transparent;
    outline: none;
    padding: 10px 10px;
    margin-bottom: 30px;
    color: #b4b4b4;
    line-height: 1.5;
    display: block;
    -webkit-transition: all .3s ease;
            transition: all .3s ease;
}


.contact-form input:focus,
.contact-form textarea:focus {
    background-color: #fff;
    color: #666;
    box-shadow: 0px 0px 2px rgba(0, 186, 255, 0.3);
}

.contact-form input[type="submit"] {
    width: auto;
    font-size: 18px;
    background-color: #666;
    border-radius: 30px;
    color: #fff;
    border: none;
    padding: 8px 40px;
}


.contact-form .form-message {
    border: 1px solid transparent;
    padding: 10px;
    font-size: 14px;
}
.contact-form .form-message * {
    margin: 0px;
}






/* ====================================================
   Footer Styles
=======================================================*/

.main-footer {
    position: relative;
    z-index: 111;
}
.main-footer {
    text-align: center;
}
.main-footer .top {
    background-color: #1e1e1e;
    color: #fff;
    padding: 85px 0px 50px;
}

.main-footer .footer-logo {
    margin-bottom: 50px;
}

.main-footer .bottom {
    background-color: #171717;
    color: #666;
    font-size: 13px;
    padding: 13px 0px;
    border-top: 1px solid #222222;
}
.main-footer .bottom p {
    margin: 0px;
}
.main-footer .footer-social li {}
.main-footer .footer-social li a {
    font-size: 17px;
    color: #fff;
    background-color: #555555;
    border: none;
    width: 50px;
    height: 50px;
    line-height: 50px;
}






/* ====================================================
   Some Helper Styles
=======================================================*/

/*
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */

.clearfix {
    *zoom: 1;
}

.nobgimage {
    background-image: inherit !important;
}

.opaciry30 {
    opacity: .3 !important;
    filter: alpha(opacity=30);
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/*
 * Print styles.
 *  Inlined to avoid required HTTP connection: h5bp.com/r
 */

@media print {
    * {
        background: transparent !important;
        color: #000 !important; /* Black prints faster: h5bp.com/s */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links for images, or javascript/internal links
     */

    a[href^="javascript:"]:after,
    a[href^="#"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group; /* h5bp.com/t */
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    @page {
        margin: 0.5cm;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

.contact .contact-location-toggle-btn span{
    border: none;
}


.hasCountdown{
  width: 100%;
  color: #FFF;
  margin: 0 auto;
  margin-bottom: 10px;
  font-family:Helvetica !important;
}

#banner-slider-controller h4{
    padding: 10px;
}

.countdown_row{
  display:flex;
  /*border:3px solid goldenrod;*/
}

.countdown_section{
  flex:1 1 25%;
  font-weight: 800;
  text-transform: uppercase;
  font-size: 16px;
  text-align: center;
  color: #00A4E0;
}

.countdown_amount{
  font-size: 56px;
  color: #FFF;
}

@media only screen and (max-width:800px){
    .countdown_amount{
    font-size: 40px;
    }
} 


@media only screen and (max-width:750px){
  body{
    -webkit-overflow-scrolling: touch;
  }
    .hasCountdown{
      width: 75%;
    }
    html, body {
    overflow-x: hidden;
    width: 100%;
}
} 

@media only screen and (max-width:480px){
    .hasCountdown{
      width: 100%;
    }
    html, body {
    overflow-x: hidden;
    width: 100%;
}
} 

.contact-info{
    padding: 20px;
}
.fb-like{
    padding: 20px;
    overflow: hidden;
    width: 100%;
}
.main-footer .top {
    background-color: #66798F;
    color: #fff;
    padding: 85px 0px 50px;
}
.main-footer .bottom {
    background-color: #344961;
    color: #fff;
    font-size: 13px;
    padding: 13px 0px;
    border-top: 1px solid #344961;
}
.main-footer .footer-social li a{
    background: #344961;
}
.contact .contact-location-toggle-btn span{
    background:#66798F;
}
.facebook{
    background: #3962B9 !important;
}
.google{
    background: red !important;
}
.twitter{
    background: #4285F4 !important;
}
.instagram{
    background: #FAC628 !important;
}
.facebook:hover,.twitter:hover,.google:hover,.instagram:hover{
    opacity:0.8 !important;
}
.contact .contact-location-toggle-btn{
    border: 3px solid #66798F;
}

/*fonts override*/
#why-features-list{
    font-family: 'Raleway', sans-serif !important;
}

